changed aboutusvariables to aboutUsMixins, adjusted flex in mixin, adjusted some styles in whoSection. NEED TO STILL FIX WHO SECTION SPACING

--- a/src/domain/aboutus/components/heading_section/HeadingSection.module.scss
+++ b/src/domain/aboutus/components/heading_section/HeadingSection.module.scss
@@ -1,16 +1,13 @@
 @import '../../../../utils/variables';
+@import '../../aboutUsMixin';
 
 .aboutUsSection {
+    @include aboutUs('section');
     background: $lightGrey;
-    box-sizing: border-box;
-    padding: 150px;
-
-    display: flex;
-    justify-content: center;
+    align-items: center;
 
     .content {
         width: 1080px;
-        // border: 1px solid magenta;
         text-align: center;
 
         display: flex;
@@ -18,23 +15,12 @@
         justify-content: center;
         align-items: center;
 
-        .pageHeader {
-            margin-left: 84px;
-            margin-top: 86px;
-
-            .header {
-                font-size: 60px;
-                font-weight: $bold;
-                line-height: 1.33;
-                color: $black;
-            }
+        .header {
+            @include aboutUs('header');
         }
-        .description {
-            margin-top: 0;
 
-            br {
-                height: 200px;
-            }
+        .description {
+            @include aboutUs('description');
         }
 
         // .pageHeaderText {
