--- a/src/domain/aboutus/components/why_section/WhySection.module.scss
+++ b/src/domain/aboutus/components/why_section/WhySection.module.scss
@@ -1,50 +1,51 @@
 @import '../../../../utils/variables';
+@import '../../aboutUsMixin';
 
 .whySection {
+    @include aboutUs('section');
     background-color: $white;
-    box-sizing: border-box;
-    padding: 150px;
-    display: flex;
-    justify-content: center;
     .content {
         width: 1240px;
         display: flex;
         flex-direction: column;
 
         .header {
-            font-size: 70px;
-            font-weight: $blackBold;
-            line-height: 1;
-            color: $darkGrey;
-            margin: 0px;
-            max-width: 100%;
+            @include aboutUs('header');
         }
-
         .description {
-            font-size: 25px;
-            font-weight: $regular;
-            line-height: 1.7;
-            color: $mediumGrey;
-            max-width: 100%;
-            margin-bottom: 0;
+            @include aboutUs('description');
         }
     }
 }
-
-// .image {
-//     width: 409px;
-//     object-fit: contain;
-//     img {
-//         width: 100%;
-//     }
-// }
-
-// .content {
-//     width: 60%;
-//     max-width: 100%;
-//     padding: 20px 0px 0px 100px;
+// .whySection {
+//     background-color: $white;
+//     box-sizing: border-box;
+//     padding: 150px;
 //     display: flex;
-//     flex-direction: column;
+//     justify-content: center;
+//     .content {
+//         width: 1240px;
+//         display: flex;
+//         flex-direction: column;
+
+//         .header {
+//             font-size: 70px;
+//             font-weight: $blackBold;
+//             line-height: 1;
+//             color: $darkGrey;
+//             margin: 0px;
+//             max-width: 100%;
+//         }
+
+//         .description {
+//             font-size: 25px;
+//             font-weight: $regular;
+//             line-height: 1.7;
+//             color: $mediumGrey;
+//             max-width: 100%;
+//             margin-bottom: 0;
+//         }
+//     }
 // }
 
 @media (max-width: $medium) {
